--- a/src/Styles/Home/home.css
+++ b/src/Styles/Home/home.css
@@ -5,6 +5,7 @@
   background-size: cover;
   margin-top: 7.8rem;
   min-height: 36rem;
+  padding-bottom: 1rem;
   animation-name: change;
   animation-timing-function: ease;
   animation-duration: 10s;
@@ -53,6 +54,7 @@
   justify-self: center;
   display: flex;
   gap: 1rem;
+  margin-bottom: 2rem;
 }
 .hero-btn-container a {
   text-decoration: none;
@@ -124,8 +126,12 @@
 }
 
 .about-card-section {
+  display: flex;
   justify-content: center;
   justify-items: center;
+  justify-self: center;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .about-card-container {
@@ -194,8 +200,10 @@
     display: none;
   }
   .hero-btn-container {
-    margin-top: 4rem;
-    display: flex;
+    margin-top: 2rem;
+    justify-content: center;
+    justify-self: center;
+    margin-bottom: 2rem;
   }
   .hero-card-section {
     display: flex;
@@ -245,8 +253,8 @@
   }
   .hero-btn-container {
     margin: auto;
+    justify-content: center;
     justify-self: center;
-    display: flex;
   }
   .hero-card-section {
     display: flex;
@@ -297,6 +305,7 @@
   }
   .hero-btn-container {
     margin: auto;
+    justify-content: center;
     justify-self: center;
     display: flex;
   }
@@ -349,6 +358,7 @@
   }
   .hero-btn-container {
     margin: auto;
+    justify-content: center;
     justify-self: center;
     display: flex;
   }
@@ -398,6 +408,7 @@
   }
   .hero-btn-container {
     margin: auto;
+    justify-content: center;
     justify-self: center;
     display: flex;
   }
