--- a/src/Styles/Home/home.css
+++ b/src/Styles/Home/home.css
@@ -126,12 +126,8 @@
 }
 
 .about-card-section {
-  display: flex;
-  justify-content: center;
-  justify-items: center;
-  justify-self: center;
-  margin-left: auto;
-  margin-right: auto;
+  display: block;
+  margin: auto;
 }
 
 .about-card-container {
@@ -201,6 +197,8 @@
   }
   .hero-btn-container {
     margin-top: 2rem;
+    display: block;
+    margin: auto;
     justify-content: center;
     justify-self: center;
     margin-bottom: 2rem;
@@ -217,6 +215,10 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+  }
+  .about-card-section {
+    display: block;
+    margin: auto;
   }
   .about-card-container {
     display: flex;
@@ -252,6 +254,7 @@
     margin-bottom: 2rem;
   }
   .hero-btn-container {
+    display: block;
     margin: auto;
     justify-content: center;
     justify-self: center;
@@ -268,6 +271,10 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+  }
+  .about-card-section {
+    display: block;
+    margin: auto;
   }
   .about-card-container {
     display: flex;
@@ -307,7 +314,8 @@
     margin: auto;
     justify-content: center;
     justify-self: center;
-    display: flex;
+    display: block;
+    margin: auto;
   }
   .hero-card-section {
     display: flex;
@@ -321,6 +329,10 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+  }
+  .about-card-section {
+    display: block;
+    margin: auto;
   }
   .about-card-container {
     display: flex;
@@ -360,7 +372,8 @@
     margin: auto;
     justify-content: center;
     justify-self: center;
-    display: flex;
+    display: block;
+    margin: auto;
   }
   .hero-card-section {
     gap: 4rem;
@@ -375,6 +388,10 @@
     display: flex;
     flex-direction: column;
     gap: 0.5rem;
+  }
+  .about-card-section {
+    display: block;
+    margin: auto;
   }
   .about-card-container {
     display: flex;
