--- a/src/Styles/Home/home.scss
+++ b/src/Styles/Home/home.scss
@@ -127,12 +127,8 @@
   }
 }
 .about-card-section {
-  display: flex;
-  justify-content: center;
-  justify-items: center;
-  justify-self: center;
-  margin-left: auto;
-  margin-right: auto;
+  display: block;
+  margin: auto;
 }
 .about-card-container {
   display: flex;
@@ -199,7 +195,8 @@
   }
   .hero-btn-container {
     margin-top: 2rem;
-    // margin: auto;
+    display: block;
+    margin: auto;
     justify-content: center;
     justify-self: center;
     margin-bottom: 2rem;
@@ -216,6 +213,10 @@
       flex-direction: column;
       gap: 0.5rem;
     }
+  }
+  .about-card-section {
+    display: block;
+    margin: auto;
   }
   .about-card-container {
     display: flex;
@@ -251,6 +252,7 @@
     }
   }
   .hero-btn-container {
+    display: block;
     margin: auto;
     justify-content: center;
     justify-self: center;
@@ -267,6 +269,10 @@
       flex-direction: column;
       gap: 0.5rem;
     }
+  }
+  .about-card-section {
+    display: block;
+    margin: auto;
   }
   .about-card-container {
     display: flex;
@@ -306,7 +312,8 @@
     margin: auto;
     justify-content: center;
     justify-self: center;
-    display: flex;
+    display: block;
+    margin: auto;
   }
   .hero-card-section {
     display: flex;
@@ -320,6 +327,10 @@
       flex-direction: column;
       gap: 0.5rem;
     }
+  }
+  .about-card-section {
+    display: block;
+    margin: auto;
   }
   .about-card-container {
     display: flex;
@@ -359,7 +370,8 @@
     margin: auto;
     justify-content: center;
     justify-self: center;
-    display: flex;
+    display: block;
+    margin: auto;
   }
   .hero-card-section {
     gap: 4rem;
@@ -374,6 +386,10 @@
       flex-direction: column;
       gap: 0.5rem;
     }
+  }
+  .about-card-section {
+    display: block;
+    margin: auto;
   }
   .about-card-container {
     display: flex;
