--- a/src/Styles/Home/home.scss
+++ b/src/Styles/Home/home.scss
@@ -127,8 +127,9 @@
   }
 }
 .about-card-section {
-  display: block;
-  margin: auto;
+  display: flex;
+  justify-content: center;
+  justify-items: center;
 }
 .about-card-container {
   display: flex;
@@ -215,14 +216,12 @@
     }
   }
   .about-card-section {
-    display: block;
-    margin: auto;
+    display: flex;
+    justify-content: center;
   }
   .about-card-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    justify-self: center;
   }
 }
 @media (min-width: 451px) and (max-width: 500px) {
@@ -271,8 +270,8 @@
     }
   }
   .about-card-section {
-    display: block;
-    margin: auto;
+    display: flex;
+    justify-content: center;
   }
   .about-card-container {
     display: flex;
@@ -329,8 +328,8 @@
     }
   }
   .about-card-section {
-    display: block;
-    margin: auto;
+    display: flex;
+    justify-content: center;
   }
   .about-card-container {
     display: flex;
@@ -388,8 +387,8 @@
     }
   }
   .about-card-section {
-    display: block;
-    margin: auto;
+    display: flex;
+    justify-content: center;
   }
   .about-card-container {
     display: flex;
