--- a/src/Styles/Home/home.css
+++ b/src/Styles/Home/home.css
@@ -51,10 +51,12 @@
 }
 
 .hero-btn-container {
-  justify-self: center;
   display: flex;
+  justify-content: center;
+  margin: auto;
   gap: 1rem;
   margin-bottom: 2rem;
+  margin-top: 4rem;
 }
 .hero-btn-container a {
   text-decoration: none;
@@ -198,10 +200,8 @@
   }
   .hero-btn-container {
     margin-top: 2rem;
-    display: block;
-    margin: auto;
+    display: flex;
     justify-content: center;
-    justify-self: center;
     margin-bottom: 2rem;
   }
   .hero-card-section {
@@ -253,10 +253,8 @@
     margin-bottom: 2rem;
   }
   .hero-btn-container {
-    display: block;
-    margin: auto;
+    display: flex;
     justify-content: center;
-    justify-self: center;
   }
   .hero-card-section {
     display: flex;
@@ -310,11 +308,8 @@
     margin-bottom: 2rem;
   }
   .hero-btn-container {
-    margin: auto;
+    display: flex;
     justify-content: center;
-    justify-self: center;
-    display: block;
-    margin: auto;
   }
   .hero-card-section {
     display: flex;
@@ -368,11 +363,8 @@
     margin-bottom: 2rem;
   }
   .hero-btn-container {
-    margin: auto;
+    display: flex;
     justify-content: center;
-    justify-self: center;
-    display: block;
-    margin: auto;
   }
   .hero-card-section {
     gap: 4rem;
